# SimpleWin32Client

./: CMakeLists.txt  build.bat  build.sh
src/: main.c
